# pytravie.clipboard

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.githooks/: install.bash  post-commit
.github/workflows/: python-package.yml  python-release.yml
travie/clipboard/: __init__.py  _extend.py
